Fix gap between navbar and hero section on legislacao page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,8 +437,7 @@ nav ul li a:hover{
     padding: 0.7%;
     color: white;
     position: relative;
-    margin-top: 60px;
-    padding-top: 64px;
+    margin-top: 64px;
 }
 
 .conteudo-legislacao {
